--- a/AR2AP.BLL/AR2AP.tt
+++ b/AR2AP.BLL/AR2AP.tt
@@ -1,8 +1,8 @@
 ﻿<#@ template language="C#" debug="false" hostspecific="true"#>
 <#@ include file="EF.Utility.CS.ttinclude"#><#@ 
  output extension=".cs"#><#
-
-const string inputFile = @"AR2AP.edmx";
+ 
+const string inputFile = @"AR2AP.edmx ";
 var textTransform = DynamicTextTransformation.Create(this);
 var code = new CodeGenerationTools(this);
 var ef = new MetadataTools(this);
@@ -24,6 +24,13 @@ foreach (var entity in typeMapper.GetItemsToGenerate<EntityType>(itemCollection)
     BeginNamespace(code);
 #>
 <#=codeStringGenerator.UsingDirectives(inHeader: false)#>
+<#  if (entity.Documentation != null && entity.Documentation.Summary != null)
+    { 
+#>
+/// <summary><#= entity.Documentation.Summary #></summary>
+<#
+    }
+#>
 <#=codeStringGenerator.EntityClassOpening(entity)#>
 {
 <#
@@ -59,7 +66,6 @@ foreach (var entity in typeMapper.GetItemsToGenerate<EntityType>(itemCollection)
         }
 #>
     }
-
 <#
     }
 
@@ -69,6 +75,11 @@ foreach (var entity in typeMapper.GetItemsToGenerate<EntityType>(itemCollection)
         foreach (var edmProperty in simpleProperties)
         {
 #>
+<#  if (edmProperty.Documentation != null && edmProperty.Documentation.Summary != null)
+    { 
+#>
+    /// <summary><#= edmProperty.Documentation.Summary #></summary>
+<#  }#>
     <#=codeStringGenerator.Property(edmProperty)#>
 <#
         }
