--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                         <li>@Html.ActionLink("AP", "Index", "Home")</li>
                         <li>@Html.ActionLink("AR", "About", "Home")</li>
                         <li>@Html.ActionLink("Tools", "Contact", "Home")</li>
-                        <li>@Html.ActionLink("User", "Contact", "Home")</li>
+                        <li>@Html.ActionLink("Foundation", "Contact", "Home")</li>
                     </ul>
                 </nav>
             </div>
