--- a/WebApp/Views/Foundation/AgencyList.cshtml
+++ b/WebApp/Views/Foundation/AgencyList.cshtml
@@ -1,30 +1,18 @@
 ﻿@{
-    ViewBag.Title = "AgencyList";
+    ViewBag.Title = "Agency List";
 }
 @model AR2AP.WebApp.Models.Foundation.SimpleListVModel<AR2AP.BLL.AgencyEntity>
 @section submenu
 {
-    <div style=" font-size: 1.5em;
-    text-align: center;
-    padding: 0.5em 2em 0.5em 1em;
-	background-color:#e2e2e2; margin-bottom:10px; font-weight:bold" class="ui-state-highlight ui-corner-all">
-        Foundation
-    </div>
-    <ul id="leftmenu">
-        <li><a href="#">Employee</a></li>
-        <li><a href="#">Agency</a></li>
-        <li><a href="#">Client</a></li>
-        <li><a href="#">Team</a></li>
-    </ul>
+    @Html.Partial("_SubMenuFoundation")
 }
-<div class="buttonset" style="margin:5px 0px; font-size:10px; font-weight:normal"><a>Add New Agency</a></div>
+<div class="buttonset" style="margin:5px 0px; font-size:10px; font-weight:normal"><a href="/Foundation/AgencyMerge">Add New</a></div>
 <table>
     <tr>
         <th>ID</th>
         <th>Agency Name</th>
         <th>Currency Type</th>
     </tr>
-
     @foreach (var item in Model.Entities)
     { 
         <tr>
@@ -34,9 +22,4 @@
         </tr>
     }
 </table>
-<script>
-    $(function () {
-        $("#leftmenu").menu();
-        $(".buttonset").buttonset();
-    });
-</script>
+
