--- a/WebApp/Views/Foundation/EmpList.cshtml
+++ b/WebApp/Views/Foundation/EmpList.cshtml
@@ -1,7 +1,12 @@
 ﻿@{
-    ViewBag.Title = "EmpList";
+    ViewBag.Title = "Employee List";
 }
 @model AR2AP.WebApp.Models.Foundation.SimpleListVModel<AR2AP.BLL.EmpEntity>
+@section submenu
+{
+    @Html.Partial("_SubMenuFoundation")
+}
+<div class="buttonset" style="margin:5px 0px; font-size:10px; font-weight:normal"><a href="/Foundation/EmpMerge">Add New</a></div>
 <table>
     <tr>
         <th>ID</th>
