--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -63,5 +63,11 @@
         </div>
     </footer>
     @RenderSection("scripts", required: false)
+    <script>
+        $(function () {
+            $("#leftmenu").menu();
+            $(".buttonset").buttonset();
+        });
+</script>
 </body>
 </html>
