--- a/WebApp/Views/Foundation/ClientList.cshtml
+++ b/WebApp/Views/Foundation/ClientList.cshtml
@@ -1,7 +1,12 @@
 ﻿@{
-    ViewBag.Title = "AgencyList";
+    ViewBag.Title = "Client List";
 }
 @model AR2AP.WebApp.Models.Foundation.SimpleListVModel<AR2AP.BLL.ClientEntity>
+@section submenu
+{
+    @Html.Partial("_SubMenuFoundation")
+}
+<div class="buttonset" style="margin:5px 0px; font-size:10px; font-weight:normal"><a href="/Foundation/ClientMerge">Add New</a></div>
 <table>
     <tr>
         <th>ClientID</th>
