add losted enums

--- a/WebApp/Views/Foundation/AgencyList.cshtml
+++ b/WebApp/Views/Foundation/AgencyList.cshtml
@@ -18,7 +18,7 @@
         <tr>
             <td>@item.AgencyID</td>
             <td><a href="/Foundation/TermMerge/@item.AgencyID">@item.AgencyName</a></td>
-            <td>@item.CurrencyType</td>
+            <td>@item.CurrencyTypeEnum</td>
         </tr>
     }
 </table>
