--- a/WebApp/Views/Foundation/ClientList.cshtml
+++ b/WebApp/Views/Foundation/ClientList.cshtml
@@ -21,7 +21,7 @@
             <td>@item.ClientID</td>
             <td><a href="/Foundation/TermMerge/@item.ClientID">@item.ClientName</a></td>
             <td>@item.ClientGroup</td>
-            <td>@item.ClientType</td>
+            <td>@item.ClientTypeEnum</td>
         </tr>
     }
 </table>
