--- a/WebApp/Views/Foundation/AgencyMerge.cshtml
+++ b/WebApp/Views/Foundation/AgencyMerge.cshtml
@@ -24,8 +24,8 @@
             </li>
             <li>
                 @Html.LabelFor(m => m.Entity.CurrencyType)
-                @Html.EnumDropDownListFor(m => m.Entity.CurrencyType, AR2AP.BLL.CurrencyTypeEnum.RMB)
-                @Html.ValidationMessageFor(m => m.Entity.CurrencyType)
+                @Html.EnumDropDownListFor(m => m.Entity.CurrencyTypeEnum, AR2AP.BLL.CurrencyTypeEnum.RMB)
+                @Html.ValidationMessageFor(m => m.Entity.CurrencyTypeEnum)
             </li>
         </ol>
         <input type="submit" value="Save" />
