--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -36,10 +36,10 @@
                 </section>
                 <nav>
                     <ul id="menu">
-                        <li>@Html.ActionLink("AP", "Index", "Home")</li>
-                        <li>@Html.ActionLink("AR", "About", "Home")</li>
+                        <li>@Html.ActionLink("AR", "List", "AR")</li>
+                        <li>@Html.ActionLink("AP", "List", "AP")</li>
                         <li>@Html.ActionLink("Tools", "Contact", "Home")</li>
-                        <li>@Html.ActionLink("Foundation", "Contact", "Home")</li>
+                        <li>@Html.ActionLink("Foundation", "EmpList", "Foundation")</li>
                     </ul>
                 </nav>
             </div>
