--- a/WebApp/Views/AR/List.cshtml
+++ b/WebApp/Views/AR/List.cshtml
@@ -6,7 +6,7 @@
 {
     @Html.Partial("_SubMenuAR")
 }
-<div class="buttonset" style="margin:5px 0px; font-size:10px; font-weight:normal"><a href="/Foundation/AgencyMerge">Add New</a></div>
+<div class="buttonset" style="margin:5px 0px; font-size:10px; font-weight:normal"><a href="/AR/Add">Add New</a></div>
 <table>
     <tr>
         <th>ID</th>
