--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -67,6 +67,8 @@
         $(function () {
             $("#leftmenu").menu();
             $(".buttonset").buttonset();
+            $(".datepicker").datepicker({ "dateFormat": "yy-mm-dd" });
+            $("input[type=submit],input[type=reset],button").button();
         });
 </script>
 </body>
