--- a/WebApp/Views/Shared/_SubMenuAR.cshtml
+++ b/WebApp/Views/Shared/_SubMenuAR.cshtml
@@ -2,8 +2,8 @@
     Account Receivable
 </div>
 <ul id="leftmenu">
-    <li><a href="/Foundation/EmpList">Employee</a></li>
-    <li><a href="/Foundation/AgencyList">Agency</a></li>
-    <li><a href="/Foundation/ClientList">Client</a></li>
-    <li><a href="/Foundation/TeamList">Team</a></li>
+    <li><a href="/AR/Add">Add AR</a></li>
+    <li><a href="/AR/List">AR List</a></li>
+    <li><a href="/AR/CollectionAdd">Add Collection</a></li>
+    <li><a href="/AR/CollectionList">Collection List</a></li>
 </ul>
