--- a/WebApp/Content/Site.css
+++ b/WebApp/Content/Site.css
@@ -113,7 +113,9 @@ h5, h6
 .content-wrapper
 {
 	margin: 0 auto;
-	max-width: 1160px;
+    padding:0 20px;
+	max-width: 1500px;
+    min-width:1160px;
 }
 
 #body
