--- a/WebApp/Views/Collection/Add.cshtml
+++ b/WebApp/Views/Collection/Add.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewBag.Title = "Add Collection";
 }
-@model AR2AP.WebApp.Models.AR.CollectionAddVModel
+@model AR2AP.WebApp.Models.Collection.AddVModel
 @using AR2AP.WebApp.Common.HtmlHelper
 @section submenu
 {
