--- a/WebApp/Views/Shared/_SubMenuAR.cshtml
+++ b/WebApp/Views/Shared/_SubMenuAR.cshtml
@@ -4,6 +4,6 @@
 <ul id="leftmenu">
     <li><a href="/AR/Add">Add AR</a></li>
     <li><a href="/AR/List">AR List</a></li>
-    <li><a href="/AR/CollectionAdd">Add Collection</a></li>
-    <li><a href="/AR/CollectionList">Collection List</a></li>
+    <li><a href="/Collection/Add">Add Collection</a></li>
+    <li><a href="/Collection/List">Collection List</a></li>
 </ul>
