--- a/WebApp/Views/AR/WriteOff.cshtml
+++ b/WebApp/Views/AR/WriteOff.cshtml
@@ -3,3 +3,7 @@
 }
 @model AR2AP.WebApp.Models.WriteOff.WriteOffVModel
 <h2>WriteOff</h2>
+@using (Html.BeginForm())
+{ 
+<input name="dd" value="3" />
+}
