--- a/WebApp/Views/AR/List.cshtml
+++ b/WebApp/Views/AR/List.cshtml
@@ -28,7 +28,7 @@
             <td>@item.InvoiceAmount<br />@item.InvoiceDate<br />@item.InvoiceTypeEnum/@item.InvoiceNo</td>
             <td>@item.ProjectNo</td>
             <td>@item.CompaignAmount</td>
-            <td><a class="writeOffOpener" href="/AR/WriteOff?arId=@item.ARID">WriteOff</a></td>
+            <td><a class="writeOffOpener" href="/AR/WriteOff?arId=@item.ARID" dialogWidth="550" dialogHeight="430" dialogTitle="ABC">WriteOff</a></td>
         </tr>
     }
 </table>
@@ -36,53 +36,7 @@
 @section Scripts {
     <script type="text/javascript">
         $(function () {
-            $("a.writeOffOpener").click(ShowDialog);
-            function ShowDialog()
-            {
-                $("div#body").append("<div id='dialog' title='Write Off'><div id='dialogContent'></div></div>");
-                function showDialogContent(data) {
-                    var div = $("#dialogContent");
-                    div.html(data);
-                }
-                function showDialogResult(data) {
-                    var div = $("#dialogContent");
-                    if (data == 'OK') {
-                        alert("OK");
-                        $("#dialog").dialog("close");
-                    }
-                    else {
-                        div.html(data);
-                    }
-                }
-                $("#dialog").dialog({
-                    autoOpen: false,
-                    show: {
-                        effect: "blind",
-                        duration: 300
-                    },
-                    hide: {
-                        effect: "Clip",
-                        duration: 300
-                    },
-                    modal: true,
-                    height: 430,
-                    width: 550,
-                    buttons: {
-                        "Submit": function () {
-                            $.post('/AR/WriteOff', $("form#dialogForm").serialize(), showDialogResult);
-                            var div = $("#smsDialogContent");
-                            div.html('<img src="/Images/loading01.gif" />正在提交，请稍后...');
-                        },
-                        "Cancel": function () { $(this).dialog("close"); }
-                    }
-                });
-                
-                var div = $("#dialogContent");
-                div.html('<img src="/Images/loading01.gif" />Loading...');
-                $("#dialog").dialog("open");
-                $.get($(this).attr("href"), '', showDialogContent);
-                return false;
-            }
+            $("a.writeOffOpener").click(ShowCommonDialog);
         });
     </script>
 }
