--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/jqueryui")
     @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/bundles/Common");
     <style type="text/css">
         #left
         {
